Fix hasFeedback icon overlap
close #7854

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -180,6 +180,13 @@ form {
       }
     }
 
+    // Fix issue: https://github.com/ant-design/ant-design/issues/7854
+    .@{ant-prefix}-input-search {
+      .@{ant-prefix}-input-suffix {
+        right: 28px;
+      }
+    }
+
     // Fix issue: https://github.com/ant-design/ant-design/issues/4783
     .@{ant-prefix}-calendar-picker,
     .@{ant-prefix}-time-picker {
